Version 0.23
- ADD: Most dialogs now have the "F1"-help
       working. (Stefan)
- ADD: The commit dialog now shows a busy cursor
       while the status of the working copy files
       is checked. (Stefan)
- BUG: The property page and the repo browser showed
       some garbage characters instead of clean
       Unicode chars. (Stefan)
- BUG: Folders with a "d" at the beginning could
       be shown wrong in the repository browser. (Stefan)
- BUG: In the property page the properties were
       not set to the selected value in the
       list-control. (Stefan)
- BUG: Fixed a registry handle leak in the shell
       extension. (Stefan)
       
Version 0.22
- ADD: A lot of improved icons. (Luebbe)
- ADD: Hint text for the setting "don't remove
       log messages when cancelling a commit". (Stefan)
- ADD: The "Add before commit" option allows now
       to add whole unversioned folders to be
       added before a commit. (Stefan)
- ADD: The commit dialog has a context menu from
       where its possible to revert changes
       in listed files. (Stefan)
- ADD: Doubleclicking on a locally modified entry
       in the "Check For Updates" dialog opens
       the diff-viewer. (Stefan)
- ADD: Reduce memory footprint of the status
       cache. (Stefan Fuhrmann)
- BUG: If the log dialog already showed all
       revisions the first time then disable
       the "Get All" button. (Stefan)
- BUG: TSVN could crash during authentication
       when fetching the remote status. (Stefan)
- BUG: After an update, the "Show Log..." 
       only showed the last revision instead
       of all revisions since the last
       update. (Stefan)
- BUG: When looking for the associated program
       for a specific filetype (e.g. *.txt)
       the environement variables weren't
       expanded. (Stefan)
- BUG: TSVN could crash in the log dialog if
       the status of a file or folder could
       not be read. (Stefan)
- BUG: The status strings weren't localized